--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
 services:
+  angular-app:
+    image: angular-app:latest
+    ports:
+      - "80:80"
+    restart: always
+
   build:
+    image: angular-build
     build:
       context: .
       dockerfile: Dockerfile.build
-    image: angular-build
-    container_name: angular-build
 
   test:
+    image: angular-test
     build:
       context: .
       dockerfile: Dockerfile.test
-    image: angular-test
-    container_name: angular-test
     depends_on:
       - build
